# Hashira-assesments

./: .npmignore  about.html  html.html
Day-3 Sass/: package-lock.json
Day1-git-github/: index.html
Week 1/: index.txt
Week 1/html-tailwind/: config.css  index.html  scripts.js
Week 1/html-tailwind/src/: output.css
Week 1/refactored-week1-proj/: config.css  index.html  package-lock.json
Week 1/refactored-week1-proj/src/: output.css
Week 1/snippets/: 10_SASS fucntions.sass
Week-1/: about.html
Week-1/Day-3 Sass/: package.json
Week-1/html-tailwind/: scripts.js
Week-1/refactored-week1-proj/: config.css  index.html  package.json
Week-1/refactored-week1-proj/scripts/: script.js  tailwind.config.js
Week-1/snippets/: 2_HTML_SEO_Boiler.html  4_CSS reset snippet.css  8_SASS variable+nesting.sass  9_SASS mixins.sass
desltop-org-app/: Cargo.toml
snippets/: 1_HTML Boiler.html  3_Performance + Security Boiler.html  5_CSS utility variables.css  6_ CSS media query snippet.css  7_CSS theme.css  attached.css  htmlBasic.html
week 2/: package-lock.json  package.json  tsconfig.json
week 2/React-app-without-CRA/: package-lock.json  package.json
week 2/npm-package/package/: index.js
week 2/typescrippt/: index.js  index.js.map
week 2/typescrippt/compiler/: index.html
week-2/React-app-without-CRA/: .babelrc  babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
week-2/React-app-without-CRA/public/: index.html  main.js
week-2/React-app-without-CRA/src/: App.js  App.tsx  Main.tsx
week-2/css-animations/: index.html
week-2/css-animations/1/: index.html  styles.css  text.txt
week-2/css-animations/2/: index.html  styles.css
week-2/javascrippt/: test.js
week-2/npm-package/final/: .gitignore  Readme.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts
week-2/npm-package/test1/: package-lock.json  package.json
week-2/typescrippt/: index.ts
week-2/typescrippt/src/: index.js
week-2/vite-app/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
week-2/vite-app/src/: App.tsx
week-3-Rust/REST-CRUD/: Cargo.toml
week-3-Rust/REST-CRUD/src/: main.rs
week-3-Rust/blockchain_fetcher/: .env  Cargo.toml  ui.html
week-3-Rust/blockchain_fetcher/src/: api.rs  main.rs  models.rs
week-3-Rust/blockchain_fetcher/src/api/: api.rs  mod.rs
week-3-Rust/blockchain_fetcher/src/handlers/: handlers.rs  mod.rs
week-3-Rust/blockchain_fetcher/src/models/: mod.rs  models.rs
week-3-Rust/cli-app/: Cargo.toml  output.txt
week-3-Rust/cli-app/src/: main.rs
week-3-Rust/hello_rust/: Cargo.toml
week-3-Rust/hello_rust/src/: main.rs  newone.rs  second.rs
week-3-Rust/pass_manager/src/: main.rs
week-3-Rust/vehicle-manager-axum/: Cargo.toml  api.tests.ps1
week-3-Rust/vehicle-manager-axum/src/: main.rs  vehicle.rs
week-4/adder/src/: lib.rs
week-4/cli-app/: Cargo.toml
week-4/cli-app/src/: main.rs
week-4/csv-app/: Cargo.toml  data.csv  data.jsonl  output.jsonl
week-4/csv-app/src/: main.rs
week-4/load-balancer/: Cargo.toml
week-4/practise/: Cargo.toml
week-4/practise/src/: main.rs
week-4/raft/: Cargo.toml
week-4/raft-db/: Cargo.toml
week-4/raft-db/src/: background_tasks.rs  main.rs  raft_state.rs  rpc_handlers.rs
week-4/raft/src/: election.rs  main.rs  messages.rs  node.rs  routes.rs  rpc.rs  state.rs
week-4/raft/src/raft/: election.rs
week-4/raft_consensus/: Cargo.toml
week-4/rafter/: Cargo.toml  ips.txt
week-4/rafter/src/: config.rs  handlers.rs  loops.rs  main.rs  rpc.rs  state.rs
week-4/test-app-next/: package-lock.json  package.json  tsconfig.json
week-4/test-app-next/app/: globals.css  layout.tsx  page.jsx  page.tsx
week-4/testrun/: package-lock.json  package.json  raftNode.ts  tsconfig.server.json
week-4/testrun/app/: page.tsx
week-7/ERC-20/: package-lock.json  package.json
week-7/solidity-only/: foundry.toml
week-8/benchmarker/: Cargo.toml  Dockerfile  docker-compose.yml
week-8/benchmarker/results/: benchmark_results.json
week-8/benchmarker/src/: db_trait.rs  main.rs  mongo_impl.rs  postgres_impl.rs  rocksdb_impl.rs  surrealdb_impl.rs  utils.rs
week-8/benchmarker/src/constants/: mod.rs
week-8/benchmarker/src/database_impls/: mod.rs  mongo_impl.rs  postgres_impl.rs  rocksdb_impl.rs  surrealdb_impl.rs
week-8/benchmarker/src/db_traits/: db_trait.rs  mod.rs
week-8/ff-client/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
week-9/benchmarker/: Dockerfile  docker-compose.yml
(+127 files in other folders)
