[package]
name = "desko"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
rocksdb = "0.21"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = "0.32"              
anyhow = "1.0"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
clap = { version = "4.5", features = ["derive"] }

# Optional: for better debouncing later
# notify-debouncer-mini = "0.3"