[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"




[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"