[package]
name = "practise"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
