[package]
name = "raft-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
axum = "0.8.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
dotenvy = "0.15"