[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.42"
