[package]
name = "db-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

surrealdb = { version = "2.0", features = ["kv-mem"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
mongodb = { version = "3.0", features = ["sync"] }